# clinicalbridge-health-project

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SETUP_GUIDE.md  agent_card.json  pyproject.toml
.github/workflows/: tests.yml
scripts/: deploy_railway.sh  test_tools_locally.py
src/clinicalbridge/: __init__.py  server.py
src/clinicalbridge/data/: __init__.py
src/clinicalbridge/fhir/: __init__.py  parsers.py
src/clinicalbridge/llm/: __init__.py
src/clinicalbridge/sharp/: __init__.py
src/clinicalbridge/tools/: __init__.py  discharge_summary.py  drug_interactions.py  followup_slots.py  icd10_suggestions.py
tests/: test_mcp_transport.py  test_patient_summary.py
